--- a/my-portfolio-master/Main/aboutme.html
+++ b/my-portfolio-master/Main/aboutme.html
@@ -38,7 +38,7 @@
 
  <h3>A compilation of my favorite non-parishable memes</h3>  
 <video width="450" height="300" controls>
-    <source src="../Dank_memes.mp4" type="video/mp4">
+    <source src="../Videos/Dank_memes.mp4" type="video/mp4">
     your browser does not support this video.
 </video>
     </body>
