--- a/my-portfolio-master/mypapers.html
+++ b/my-portfolio-master/mypapers.html
@@ -8,6 +8,9 @@
     </head>
     
 <ul>
+    <li><a href="SOSApp.asm" target="_blank">Coding assignment written in assembly language.</a>
+        <p>This is a file containing assembly code to produce a light flash signaling SOS I worked on in CDA 3104</p>
+    </li>
     <li><a href="Report%20for%20COP%201500.pdf" target="_blank">Report on Computer science, Software engineering, and Information Technology</a>
         <p>This is a paper I wrote for my COP class in which I describe the differences between these three majors and why I chose the Major I'm currently in.</p>
     </li>
@@ -19,7 +22,7 @@
  <h3>Music I listen too when I'm studying, relaxing, or working.</h3>
 <div>   
 <audio controls>
-    <source src="I will wait for you until the very end (1)-[AudioTrimmer.com] (1).mp3">
+    <source src="Videos/I%20will%20wait%20for%20you%20until%20the%20very%20end%20(1)-%5BAudioTrimmer.com%5D%20(1).mp3">
     your browser does not support this video.
 </audio>
 </div>
