--- a/my-portfolio-master/index.html
+++ b/my-portfolio-master/index.html
@@ -5,7 +5,7 @@
 <head>
 <title>William Howell's portfolio</title>
     <link href="style.css" type="text/css" rel="stylesheet">
-    <link href="../mypapers.html" rel="alternate">
+    <link href="mypapers.html" rel="alternate">
     </head>
     
     <body>
@@ -15,7 +15,7 @@
     
         <div class="allbuttons">
         <a href="aboutme.html" class="buttons">about me</a>
-        <a href="../mypapers.html" class="buttons">assignments</a>
+        <a href="mypapers.html" class="buttons">assignments</a>
         <a href="https://www.linkedin.com/in/william-howell-a73450176/" target="_blank" class="buttons"> My LinkedIn profile</a>
         </div>
     </body>
