--- a/my-portfolio-master/mypapers.html
+++ b/my-portfolio-master/mypapers.html
@@ -4,7 +4,7 @@
 <head>
     <title>Written work</title>
     <h1 class="header">My Papers and Projects</h1>
-    <link href="Main/style.css" type="text/css" rel="stylesheet">
+    <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     
 <ul>
