--- a/my-portfolio-master/aboutme.html
+++ b/my-portfolio-master/aboutme.html
@@ -5,10 +5,10 @@
 <head>
     <title>About me</title>
     <link href="style.css" type="text/css" rel="stylesheet">
-    <link href="../mypapers.html" rel="alternate">
+    <link href="mypapers.html" rel="alternate">
     <style>
         body{
-            background-image: url("../ocean.jpg");
+            background-image: url("ocean.jpg");
             background-size: cover;
             background-position: center;
         }
@@ -24,7 +24,7 @@
         being able to create and control what happens on the screen. Just writing code alone was an enjoyment, all the times I was frustrated all overlooked
         because of that sweet feeling of finishing what you had to code or fix. I really love this major and can't wait to see how I continue to grow through the years.
     </p>
-<img src="../IMG_0087.jpg" alt="photo of me">
+<img src="IMG_0087.jpg" alt="photo of me">
         <h2>Things I Like to do</h2>
     <ul>
         <li>play video games</li>
@@ -38,7 +38,7 @@
 
  <h3>A compilation of my favorite non-parishable memes</h3>  
 <video width="450" height="300" controls>
-    <source src="../Videos/Dank_memes.mp4" type="video/mp4">
+    <source src="Videos/Dank_memes.mp4" type="video/mp4">
     your browser does not support this video.
 </video>
     </body>
