assignments page fix

--- a/mypapers.html
+++ b/mypapers.html
@@ -30,7 +30,7 @@
     <div class=info>
 		<canvas id="myCanvas" width="550" height="100">
           Your browser does not support the HTML5 canvas tag.</canvas>
-        <a href="index.html" class="buttons">Home page</a>
+        <a href="https://willgame10.github.io/my-portfolio-master/" class="buttons">Home page</a>
           <script>
             var c = document.getElementById("myCanvas");
             var ctx = c.getContext("2d");
