assignments page fix

--- a/mypapers.html
+++ b/mypapers.html
@@ -5,6 +5,7 @@
     <title>Written work</title>
     <h1 class="header">My Papers and Projects</h1>
     <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="index.html" rel="alternate">
     </head>
     
 <ul>
