assignments page fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     
     <body>
-    <a href="https://www.fgcu.edu/" target="_blank" alt="FGCU Logo" id="logo">
+    <a href="https://www.fgcu.edu/" target="_blank">
     <img id="logo" src="https://www.fgcu.edu/_resources/images/logo-blue@2x.png" alt="Florida Gulf Coast University logo" >
     </a>
     
