assignments page fix

--- a/aboutme.html
+++ b/aboutme.html
@@ -32,9 +32,6 @@
         <li>watch new videos or movies</li>
         <li>cook and eat food</li>
         </ul>
-  
-<h3>Favorite Rapper</h3>
-    <a href=https://soundcloud.com/antsyd> Antsyd </a>
 
  <h3>A compilation of my favorite non-parishable memes</h3>  
 <video width="450" height="300" controls>
@@ -51,7 +48,7 @@
             var c = document.getElementById("myCanvas");
             var ctx = c.getContext("2d");
             ctx.font = "30px Arial";
-            ctx.fillText("Thank you for visiting my website",10,50);
+            ctx.fillText("",10,50);
           </script>
 	  </div>
     </footer>
