--- a/mypapers.html
+++ b/mypapers.html
@@ -36,7 +36,7 @@
             var c = document.getElementById("myCanvas");
             var ctx = c.getContext("2d");
             ctx.font = "30px Arial";
-            ctx.fillText("Thank you for visiting my website",10,50);
+            ctx.fillText("",10,50);
           </script>
 	  </div>
     </footer>
