changed photo of Myself

--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     <link href="mypapers.html" rel="alternate">
     <style>
         body{
-            background-image: url("ocean.jpg");
+            background-image: url("Photos/ocean.jpg");
             background-size: cover;
             background-position: center;
         }
@@ -24,7 +24,7 @@
         being able to create and control what happens on the screen. Just writing code alone was an enjoyment, all the times I was frustrated all overlooked
         because of that sweet feeling of finishing what you had to code or fix. I really love this major and can't wait to see how I continue to grow through the years.
     </p>
-<img src="IMG_0087.jpg" alt="photo of me">
+<img src="Photos/me.jpg" alt="photo of me">
         <h2>Things I Like to do</h2>
     <ul>
         <li>play video games</li>
