changed photo of Myself

--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
         being able to create and control what happens on the screen. Just writing code alone was an enjoyment, all the times I was frustrated all overlooked
         because of that sweet feeling of finishing what you had to code or fix. I really love this major and can't wait to see how I continue to grow through the years.
     </p>
-<img src="Photos/me.jpg" alt="photo of me">
+<img src="Photos/me.jpg" alt="photo of me" id="myPhoto">
         <h2>Things I Like to do</h2>
     <ul>
         <li>play video games</li>
