about me paragraph content

--- a/aboutme.html
+++ b/aboutme.html
@@ -21,8 +21,18 @@
         to college wanting to become a psychology major. I found out one semester in that it wasn't what I wanted to do. I wasn't going make something out
         of myself with good looks so leaving college wasn't a choice. So I chose to become a software engineer. At first I was very new to the whole world of coding
         because I never thought this is what I would want to do earlier in life but after my first classes I found it a lot of fun. I really enjoyed programming and
-        being able to create and control what happens on the screen. Just writing code alone was an enjoyment, all the times I was frustrated all overlooked
-        because of that sweet feeling of finishing what you had to code or fix. I really love this major and can't wait to see how I continue to grow through the years.
+        being able to create and control what happens on the screen. Just writing code alone is an enjoyment, all the times I've been frustrated all overlooked
+        because of that sweet feeling of finishing what you had to code or fix.
+
+        Currently I haven't created anything worth value but I have a whole bunch of projects I have worked on in classes. Each of these projects is a little bit of knowledge
+        that I learned and all show me growing. From learning html/css to learning C++ and Java. I have files with code of each of these languages and there is soon to be more.
+        The next type of code I am taking on is javafx and creating a GUI with a database. This is probably the cooler of the other files because it is bringing together most
+        of what I understand and putting it in one while learning new stuff like using databases and SQL.
+
+        Other than my homework the previous experience with engineering projects I have is exclusively with Neuro-Tech. I am working with a few others to create GUI and we hope to do more than just this.
+        I can't really write about most of it but it is really cool to see how we are connecting hardware with software to create something. I hope my journey with them continues although it is rough to keep up with
+        classes and work all together. I really love software engineering and can't wait to continue learning about all the new technology and how to code many different languages. My path on what I will end up working on
+        in software engineering isn't clear but I will say that I want to be working with breakthrough tech. Like tech for VR or tech using brain signals as input and I can 100% see myself doing this in the near future.
     </p>
 <img src="Photos/me.jpg" alt="photo of me" height="577" width="433">
         <h2>Things I Like to do</h2>
