--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="aboutme.html" class="buttons">about me</a>
         <a href="mypapers.html" class="buttons">assignments</a>
         <a href="https://www.linkedin.com/in/william-howell-a73450176/" target="_blank" class="buttons"> My LinkedIn profile</a>
+            <a href="EGNperspectives.html" class="buttons">EGN experience</a>
         </div>
     </body>
     
