--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     <link href="mypapers.html" rel="alternate">
     <style>
         body{
-            background-image: url("Photos/ocean.jpg");
+            background-image: url("Photos/bbboi.png");
             background-size: cover;
             background-position: center;
         }
@@ -17,7 +17,7 @@
     <body>
         
 <h1 class="header">William Howell's portfolio</h1>
-    <p id="meparagraph">Hello! my name is William Howell. I am currently in my 4th year of college learning to become a software engineer. At first I came
+    <p id="paragraph">Hello! my name is William Howell. I am currently in my 4th year of college learning to become a software engineer. At first I came
         to college wanting to become a psychology major. I found out one semester in that it wasn't what I wanted to do. I wasn't going make something out
         of myself with good looks so leaving college wasn't a choice. So I chose to become a software engineer. At first I was very new to the whole world of coding
         because I never thought this is what I would want to do earlier in life but after my first classes I found it a lot of fun. I really enjoyed programming and
