--- a/mypapers.html
+++ b/mypapers.html
@@ -6,38 +6,41 @@
     <h1 class="header">My Papers and Projects</h1>
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="index.html" rel="alternate">
-    </head>
-    
+</head>
+
 <ul>
     <li><a href="SOSApp.asm" target="_blank">Coding assignment written in assembly language.</a>
         <p>This is a file containing assembly code to produce a light flash signaling SOS I worked on in CDA 3104</p>
     </li>
-    <li><a href="Report%20for%20COP%201500.pdf" target="_blank">Report on Computer science, Software engineering, and Information Technology</a>
-        <p>This is a paper I wrote for my COP class in which I describe the differences between these three majors and why I chose the Major I'm currently in.</p>
+    <li><a href="Report%20for%20COP%201500.pdf" target="_blank">Report on Computer science, Software engineering, and
+        Information Technology</a>
+        <p>This is a paper I wrote for my COP class in which I describe the differences between these three majors and
+            why I chose the Major I'm currently in.</p>
     </li>
     <li><a href="https://scratch.mit.edu/users/willgame10/" target="blank">my scratch projects</a>
-    <p>this is my scratch profile. On here you can find two games that I created using scratch.</p>
+        <p>this is my scratch profile. On here you can find two games that I created using scratch.</p>
     </li>
 </ul>
 
- <h3>Music I listen too when I'm studying, relaxing, or working.</h3>
-<div>   
-<audio controls>
-    <source src="Videos/I%20will%20wait%20for%20you%20until%20the%20very%20end%20(1)-%5BAudioTrimmer.com%5D%20(1).mp3">
-    your browser does not support this video.
-</audio>
+<h3>Music I listen too when I'm studying, relaxing, or working.</h3>
+<div>
+    <audio controls>
+        <source src="Videos/I%20will%20wait%20for%20you%20until%20the%20very%20end%20(1)-%5BAudioTrimmer.com%5D%20(1).mp3">
+        your browser does not support this video.
+    </audio>
 </div>
-    <footer>
+<footer>
     <div class=info>
-		<canvas id="myCanvas" width="550" height="100">
-          Your browser does not support the HTML5 canvas tag.</canvas>
+        <canvas id="myCanvas" width="550" height="100">
+            Your browser does not support the HTML5 canvas tag.
+        </canvas>
         <a href="index.html" class="buttons">Home page</a>
-          <script>
+        <script>
             var c = document.getElementById("myCanvas");
             var ctx = c.getContext("2d");
             ctx.font = "30px Arial";
-            ctx.fillText("",10,50);
-          </script>
-	  </div>
-    </footer>
+            ctx.fillText("", 10, 50);
+        </script>
+    </div>
+</footer>
 </html>
