--- a/EGNperspectives.html
+++ b/EGNperspectives.html
@@ -5,7 +5,7 @@
     <title>My EGN experience</title>
     <link href="style.css" type="text/css" rel="stylesheet">
     <style>
-        body{
+        body {
             background-image: url("Photos/bbboi.png");
             background-size: cover;
             background-position: center;
@@ -13,24 +13,34 @@
     </style>
 </head>
 <body>
-<h1 class ="header">My EGN experience</h1>
-<p id="paragraph">My experience with EGN has been very interesting. I felt like a lot of the work I did was busy work. Although said I did not take the work as a joke.
-    I understood why the class is important and its mainly to help us get into the mindset of what a software engineer should be thinking about and how he should
-    go about solving solutions to problems. I learned that when programming there are ethics to take into account and when creating technology I want to
-    be the person to produce something that will bring good and not destruction. I want to create something that will help humans and do what I can to make sci-fi
-    reality but safely and with the correct procedures. We also payed a lot of attention to topics like global warming and things that affects everyone on the globe.
-    These were things I never thought about and when we talked about it in class I enjoyed learning about it because in reality I don't think I would have done research
-    like this otherwise. I had a great time with the course as well because I like thinking about all the possibility's. If I could go back and retake this class I would
+<h1 class="header">My EGN experience</h1>
+<p id="paragraph">My experience with EGN has been very interesting. I felt like a lot of the work I did was busy work.
+    Although said I did not take the work as a joke.
+    I understood why the class is important and its mainly to help us get into the mindset of what a software engineer
+    should be thinking about and how he should
+    go about solving solutions to problems. I learned that when programming there are ethics to take into account and
+    when creating technology I want to
+    be the person to produce something that will bring good and not destruction. I want to create something that will
+    help humans and do what I can to make sci-fi
+    reality but safely and with the correct procedures. We also payed a lot of attention to topics like global warming
+    and things that affects everyone on the globe.
+    These were things I never thought about and when we talked about it in class I enjoyed learning about it because in
+    reality I don't think I would have done research
+    like this otherwise. I had a great time with the course as well because I like thinking about all the possibility's.
+    If I could go back and retake this class I would
     do so only to research and focus on other topics. Although nothing is preventing me from doing my own research.</p>
 
 <ul>
-    <li><a href="Health%20and%20Technology.pptx" target="_blank">a slide show writing about current efforts on global challenges.</a>
+    <li><a href="Health%20and%20Technology.pptx" target="_blank">a slide show writing about current efforts on global
+        challenges.</a>
         <p id="inDark">
-            In this assignment I talk about two types of technology in the health topic of global challenges. The first one is a bionic that is a prosthetic arm
+            In this assignment I talk about two types of technology in the health topic of global challenges. The first
+            one is a bionic that is a prosthetic arm
             that sends messages back to the user through the nerves to imitates the sense of touch.
             <br>
             The second technology includes nanobots.
-            For this part I talk about a few product being researched like nanobots that can seek and destroy cancer to pills that you can swallow and will administer medicines while monitoring
+            For this part I talk about a few product being researched like nanobots that can seek and destroy cancer to
+            pills that you can swallow and will administer medicines while monitoring
             health.</p>
 </ul>
 
@@ -38,13 +48,14 @@
 <footer>
     <div class=info>
         <canvas id="myCanvas" width="550" height="100">
-            Your browser does not support this tag</canvas>
+            Your browser does not support this tag
+        </canvas>
         <a href="index.html" class="buttons">Home page</a>
         <script>
             var c = document.getElementById("myCanvas");
             var ctx = c.getContext("2d");
             ctx.font = "30px Arial";
-            ctx.fillText("",10,50);
+            ctx.fillText("", 10, 50);
         </script>
     </div>
 </footer>
