--- a/EGNperspectives.html
+++ b/EGNperspectives.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <head>
-    <title>My EGN experience</title>
+    <title>My EGN Perspectives Experience</title>
     <link href="style.css" type="text/css" rel="stylesheet">
     <style>
         body {
@@ -13,9 +13,9 @@
     </style>
 </head>
 <body>
-<h1 class="header">My EGN experience</h1>
+<h1 class="header">My EGN Perspectives experience and projects</h1>
 <p id="paragraph">My experience with EGN has been very interesting. I felt like a lot of the work I did was busy work.
-    Although said I did not take the work as a joke.
+    Although that's how the class felt I treated it like any other class.
     I understood why the class is important and its mainly to help us get into the mindset of what a software engineer
     should be thinking about and how he should
     go about solving solutions to problems. I learned that when programming there are ethics to take into account and
@@ -23,25 +23,58 @@
     be the person to produce something that will bring good and not destruction. I want to create something that will
     help humans and do what I can to make sci-fi
     reality but safely and with the correct procedures. We also payed a lot of attention to topics like global warming
-    and things that affects everyone on the globe.
-    These were things I never thought about and when we talked about it in class I enjoyed learning about it because in
-    reality I don't think I would have done research
-    like this otherwise. I had a great time with the course as well because I like thinking about all the possibility's.
-    If I could go back and retake this class I would
-    do so only to research and focus on other topics. Although nothing is preventing me from doing my own research.</p>
+    and things that affect everyone on the globe.
+    These were things I never thought about and when we talked about it in class I enjoyed learning about it. Something
+    that I never really payed much attention too
+    was global warming and health in other countries. These are big things that I now pay attention too with a lens on
+    it.
+    before I was never the person to care about
+    global warming or what's happening in uganda but now I can be the person to help solve issues like this and the
+    first
+    step was just researching a little about a big problem.
+</p>
 
 <ul>
     <li><a href="Health%20and%20Technology.pptx" target="_blank">a slide show writing about current efforts on global
         challenges.</a>
-        <p id="inDark">
+        <p class="inDark">
             In this assignment I talk about two types of technology in the health topic of global challenges. The first
             one is a bionic that is a prosthetic arm
             that sends messages back to the user through the nerves to imitates the sense of touch.
             <br>
             The second technology includes nanobots.
-            For this part I talk about a few product being researched like nanobots that can seek and destroy cancer to
+            For this part I talk about a few products being researched like nanobots that can seek and destroy cancer to
             pills that you can swallow and will administer medicines while monitoring
-            health.</p>
+            health.
+            <br>
+            From this project I learned that there are a lot of things to think about when you want to create something
+            like
+            documentation on what a product is and that once you create something like the sense of touch you might be
+            able to apply one
+            creation to many others.
+        </p>
+    <li><a href="Hamilton%20University.pdf" target="_blank">a poster of a future solution for facial recognition
+        with bank transactions.</a>
+        <p class="inDark">
+            In this assignment we made groups with a few peers with similar interests, Mine was cyber security. We had
+            theorized
+            about a product that would make bank transactions safer.
+            we saw an opportunity to appeal to bankers and investors who would like more security. We thought first off
+            that banks
+            need to be secure to have any business and investors
+            alike need a place to secure all of their cash. So why don't we make it secure from people who might be
+            monitoring your computer at home like a keylogger.
+            <br>
+            To do this we thought we could do facial recognition and throw on 2FA to make it extra secure. This would
+            make your account super personalized because no transaction will be made unless you are on the camera. This
+            would be a good idea in today's society considering a lot of people already have cameras at home on
+            computers for
+            remote work.
+            <br>
+            I personally think the project was fun to do and a nice break from coding to just think about something
+            futuristic and working with my group mate was enjoyable as well.
+        </p>
+    </li>
 </ul>
 
 </body>
