--- a/EGNperspectives.html
+++ b/EGNperspectives.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <head>
-    <title>My EGN Perspectives Experience</title>
+    <title>My EGN Perspectives Experience and Reflection</title>
     <link href="style.css" type="text/css" rel="stylesheet">
     <style>
         body {
@@ -13,8 +13,8 @@
     </style>
 </head>
 <body>
-<h1 class="header">My EGN Perspectives experience and projects</h1>
-<p id="paragraph">My experience with EGN has been very interesting. I felt like a lot of the work I did was busy work.
+<h1 class="header">My EGN Perspectives experience, projects, and reflection</h1>
+<p class="paragraph">My experience with EGN has been very interesting. I felt like a lot of the work I did was busy work.
     Although that's how the class felt I treated it like any other class.
     I understood why the class is important and its mainly to help us get into the mindset of what a software engineer
     should be thinking about and how he should
@@ -77,6 +77,31 @@
     </li>
 </ul>
 
+<p class="paragraph">
+    After going through the course I have many takeaways. through the semester we had gone through subsections of global challenges in today's society.
+    The first was sustainability. In this section we talked about the PlayPump and how a product will sustain. following PlayPump and researching about it we learned
+    that it was a failed product because of a few flaws not thought about like is the area going to be good for it or are the water reserves underground going to be dried up
+    or will these pumps last and not degrade or break. All of these were things that weren't thought upon and led to its failure. Although a good design the product was made and
+    distributed without thinking 3 steps ahead. To build something sustainable you need to think about anything that can happen or challenges that might arise when creating something.
+    You can't just think about something that fixes a solution for 3 months. A solution product should last years and solve the problem at hand.
+    <br><br>
+    The next section was health. In this section we talked about health challenges around the world and future solutions to health problems. We talked about life expectancy,
+    pollution and quality of life for paraplegics. In this section I found my main interest right now. And that is bionics. The reason why is I am working with BCI and
+    learning that BCI technology can stretch how far we can reach in prosthetic technology. With this we can recreate the sense of touch and do things thought of in movies.
+    I have also learned about how big the health industry is and what is required for people to live healthy lives because it's more in depth than doing a keto diet.
+    people around the world don't always have access to clean fuel and healthy food. This is where engineers need to step in and find a solution that is possible for people
+    wherever they might be.
+    <br><br>
+    The third section was security. In this section we talked about possible threats, motivations for threats, and possible attacks. Here we researched how security
+    is needed during disasters and what needs to go into securing and providing a solution that ends well. We need to think ahead and plan in case of any disaster or scenario.
+    Without thinking about possible scenarios how can you protect yourself and make sure at the end of the road you will be ok.
+    You need to stay prepared think about cause and effect. You need to work out possible situations and come up with a response for everything possible.
+    <br><br>
+    In last section we talk about the joy of living. We did not go over this in class but I can see how the joy of living can be implemented in anything.
+    Joy of living can be built upon by other projects such as BCI where you can use it for health purposes like connecting a prosthetic limb that can help create an
+    easier lifestyle. They can return to normal life and what they enjoyed before they were no longer able to do that. Joy of living is the essence of everything we create
+    This section is all about makes humans happy and that of progressiveness and Quality of life improvements.
+</p>
 </body>
 <footer>
     <div class=info>
