--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
 <body>
 
 <h1 class="header">William Howell's portfolio</h1>
-<p id="paragraph">Hello! my name is William Howell. I am currently in my 4th year of college learning to become a
+<p class="paragraph">Hello! my name is William Howell. I am currently in my 4th year of college learning to become a
     software engineer. At first I came
     to college wanting to become a psychology major. I found out one semester in that it wasn't what I wanted to do. I
     wasn't going make something out
