--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang=en>
-<meta charset="UTF-8">
-
 <head>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>About me</title>
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="mypapers.html" rel="alternate">
@@ -16,7 +15,7 @@
 </head>
 <body>
 
-<h1 class="header">William Howell's portfolio</h1>
+<h1 class="header">About Me</h1>
 <p class="paragraph">Hello! my name is William Howell. I am currently in my 4th year of college learning to become a
     software engineer. At first I came
     to college wanting to become a psychology major. I found out one semester in that it wasn't what I wanted to do. I
